# rust_fullstack

./: Cargo.toml  README.md
src/: main.rs
templates/: admin.hbs  attendance.hbs  employee.hbs  home.hbs  leave.hbs  response.hbs  show.hbs  slip.hbs  stock.hbs  user.hbs  welcome.hbs
