[package]
name = "combine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql ="*"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]